<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_marginTop="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_name"
        android:textSize="30sp"
        android:layout_marginBottom="10sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_message" />
    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_message"
        android:textColor="@color/textWhiteColor"
        android:layout_marginTop="60sp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_message"
        android:textColor="@color/textWhiteColor"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_message"
        android:textColor="@color/textWhiteColor"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="60sp"/>
    <Button
        android:id="@+id/create_new_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80sp"
        android:layout_marginRight="80sp"
        android:text="@string/new_account_button"/>
    <TextView
        android:id="@+id/return_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="6sp"
        android:text="@string/return_account_button"/>
</LinearLayout>